# insurance-reserves

./: pyproject.toml
insurance_reserves/: __init__.py  data.py  development.py  models.py  projection.py  reserves.py  tail.py  triangle.py
tests/: test_development.py  test_models.py  test_triangle.py
